--- a/index.html
+++ b/index.html
@@ -10,19 +10,38 @@
 </head>
 
 <body>
-    <div class="text-center">
+    <div class="text-center mt-4">
         <h3 class="text-primary">Welcome To My Portfolio Website</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam perferendis quos omnis enim, officia nam
-            quam sit corporis reiciendis? Sit molestias quo repellat provident delectus illum rerum accusantium soluta
-            recusandae!</p>
-        <p>Facere porro, aperiam soluta debitis et unde quod temporibus eum consequuntur. Sint est illum error nulla
-            ratione, unde sed aperiam illo doloribus dolor ipsam quas enim perferendis fugit nobis aliquam?</p>
-        <p>Sint fugiat sequi distinctio dolore, temporibus hic alias perferendis. Repellat ipsum deserunt obcaecati,
-            voluptatum dolorem praesentium consequuntur voluptate officiis soluta excepturi quibusdam numquam quo rem
-            error iure, ex, deleniti modi.</p>
-        <p>Debitis dolorum praesentium voluptate maiores cupiditate vel architecto. Blanditiis ipsa aspernatur mollitia!
-            Exercitationem quod provident architecto minima aliquid ea facere, culpa esse deserunt impedit, nulla
-            veritatis explicabo doloribus voluptas repellendus!</p>
+        <div class="col col-12">
+            <div class="row">
+                <div class="col col-9">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam perferendis quos omnis enim,
+                        officia nam
+                        quam sit corporis reiciendis? Sit molestias quo repellat provident delectus illum rerum
+                        accusantium soluta
+                        recusandae!</p>
+                    <p>Facere porro, aperiam soluta debitis et unde quod temporibus eum consequuntur. Sint est illum
+                        error nulla
+                        ratione, unde sed aperiam illo doloribus dolor ipsam quas enim perferendis fugit nobis aliquam?
+                    </p>
+                    <p>Sint fugiat sequi distinctio dolore, temporibus hic alias perferendis. Repellat ipsum deserunt
+                        obcaecati,
+                        voluptatum dolorem praesentium consequuntur voluptate officiis soluta excepturi quibusdam
+                        numquam quo rem
+                        error iure, ex, deleniti modi.</p>
+                    <p>Debitis dolorum praesentium voluptate maiores cupiditate vel architecto. Blanditiis ipsa
+                        aspernatur mollitia!
+                        Exercitationem quod provident architecto minima aliquid ea facere, culpa esse deserunt impedit,
+                        nulla
+                        veritatis explicabo doloribus voluptas repellendus!</p>
+                </div>
+                <div class="col col-3">
+                    <img src="https://st.depositphotos.com/1898481/3884/i/600/depositphotos_38840419-stock-photo-silhouette.jpg"
+                        alt="My Profile Photo" class="img-thumbnail" />
+                </div>
+            </div>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
