--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="text-center mt-4">
         <h3 class="text-primary">Welcome To My Portfolio Website</h3>
-        <div class="col col-12">
+        <div class="col col-12 container">
             <div class="row">
-                <div class="col col-9">
+                <div class="col col-9 bordered">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam perferendis quos omnis enim,
                         officia nam
                         quam sit corporis reiciendis? Sit molestias quo repellat provident delectus illum rerum
@@ -35,7 +35,7 @@
                         nulla
                         veritatis explicabo doloribus voluptas repellendus!</p>
                 </div>
-                <div class="col col-3">
+                <div class="col col-3 bordered">
                     <img src="https://st.depositphotos.com/1898481/3884/i/600/depositphotos_38840419-stock-photo-silhouette.jpg"
                         alt="My Profile Photo" class="img-thumbnail" />
                 </div>
