--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="text-center mt-4">
+    <div class="mt-4">
         <h3 class="text-primary">Welcome To My Portfolio Website</h3>
         <div class="col col-12 container">
             <div class="row">
