--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
@@ -244,8 +243,31 @@
                                 <p>Completed C# programming course and get cetification of completion !</p>
                             </div>
                         </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2020 - 2022</p>
+                                <h3 class="item-title">My Certification's</h3>
+                                <h5>Programming</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <ul>
+                                    <li>Programming in C# , MFT , Oct 2020</li>
+                                    <li>HTML , SoloLearn , Dec 2020</li>
+                                    <li>Programming in C# , SoloLearn , Dec 2020</li>
+                                    <li>Web Development Fundamentals , SoloLearn , Apr 2022</li>
+                                    <li>Programming in JavaScript , SoloLearn , Apr 2022</li>
+                                    <li>Responsive Web Design , freeCodeCamp , Apr 2022</li>
+                                    <li>EF SET English , EF Standard English Test , Apr 2022</li>
+                                    <li>SQL , SoloLearn , Jun 2022</li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
+
             </div>
 
         </div> <!-- end about-experience -->
@@ -506,7 +528,7 @@
         <div class="row contact-infos" data-aos="fade-up" data-aos-anchor=".contact-main">
 
             <div class="column large-5 medium-full contact-phone">
-                <h4>Call Me</h4>
+                <h4>Contact Me</h4>
                 <a href="tel:197-543-2345">+989036195587</a>
             </div>
 
