--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 
             <div class="column large-5 medium-full contact-phone">
                 <h4>Contact Me</h4>
-                <a href="tel:197-543-2345">+989036195587</a>
+                <a href="tel:09036195587">+989036195587</a>
             </div>
 
             <div class="column large-7 medium-full contact-social">
