--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                 <img src="https://user-images.githubusercontent.com/76275587/172545085-d7b647bc-51c4-4fc7-bb41-d14eb13ae27a.jpg"
                                     alt="Dias Computer">
                             </a>
-                            <a href="https://github.com/MBakhtiari97/DiasComputer" class="item-folio__project-link"
+                            <a href="https://github.com/MBakhtiari97/DiasComputer.Ver1.0" class="item-folio__project-link"
                                 title="Project link" target="_blank"></a>
                         </div>
 
