--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
         <div class="row heading-block" data-aos="fade-up">
             <div class="column large-full">
-                <h2 class="section-heading">Get In Touch</h2>
+                <h2 class="section-heading">Stay In Touch</h2>
             </div>
         </div>
 
@@ -529,7 +529,7 @@
 
             <div class="column large-5 medium-full contact-phone">
                 <h4>Contact Me</h4>
-                <a href="tel:09036195587">+989036195587</a>
+                <a href="tel:09112193372">+989112193372</a>
             </div>
 
             <div class="column large-7 medium-full contact-social">
